# clawrouter

./: .dockerignore  .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
.spec/: 2026-06-16-clawrouter-native-broker.md
admin/: index.html  package.json  playwright.config.ts
crates/edge/: Cargo.toml  build.rs
crates/edge/src/: lib.rs  provider-icons.json
docs/: agent-spend-control.md  architecture.md  aws-bedrock.md  content-retention.md  deploy-cloudflare.md  fakeco.md  fusion-router.md  openclaw.md  self-hosting.md  spec.md
providers/: README.md  anthropic.provider.yaml  aws-bedrock.provider.yaml  azure-openai.provider.yaml  cloudflare-ai-gateway.provider.yaml  cohere.provider.yaml  deepseek.provider.yaml  firecrawl.provider.yaml  fireworks.provider.yaml  github.provider.yaml  google-gemini.provider.yaml  groq.provider.yaml  huggingface.provider.yaml  linear.provider.yaml  local-openai.provider.yaml  minimax.provider.yaml  mistral.provider.yaml  notion.provider.yaml  openai.provider.yaml  openrouter.provider.yaml  perplexity.provider.yaml  replicate.provider.yaml  slack.provider.yaml  tavily.provider.yaml  together.provider.yaml  xai.provider.yaml
scripts/: admin-api.mjs  assert-deployment-target.mjs  bootstrap-fakeco.mjs  compile-providers.mjs  deploy-doctor.mjs  deploy-preflight.mjs  deployment-profile.mjs  key-put.mjs  key-revoke.mjs  oauth-put.mjs  oauth-revoke.mjs  provider-credential-preflight.mjs  provider-smoke-plan.mjs  provision-access.mjs  provision-cloudflare.mjs  provision-content-storage.mjs  put-provider-secrets.mjs  render-wrangler-config.mjs  smoke-access-gate.mjs  smoke-deployed.mjs  smoke-local-worker.mjs  smoke-readiness.mjs  smoke-self-host.mjs  sync-provider-icons.mjs  teardown-fakeco.mjs
shared/: contracts.ts
test/: admin-api.test.mjs  deploy-doctor.test.mjs  fakeco-bootstrap.test.mjs  fakeco-deployment.test.mjs  fakeco-teardown.test.mjs  (+12 more)
(+153 files in other folders)
