[workspace]
members = [
  "crates/core",
  "crates/edge",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/openclaw/clawrouter"

[workspace.dependencies]
clawrouter-core = { path = "crates/core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"

