[package]
name = "clawrouter-edge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clawrouter-core.workspace = true
serde_json.workspace = true
worker = "0.8.3"

[build-dependencies]
clawrouter-core.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
